--- a/esthesis-edge-modules/pom.xml
+++ b/esthesis-edge-modules/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>esthesis-edge-backend</artifactId>
+  <artifactId>esthesis-edge-modules</artifactId>
   <packaging>pom</packaging>
 
   <properties>
@@ -20,8 +20,7 @@
   </properties>
 
   <modules>
-    <module>esthesis-edge-backend-api</module>
-    <module>esthesis-edge-backend-impl</module>
+    <module>esthesis-edge-modules-enedis</module>
   </modules>
 
 </project>
