--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
   <parent>
     <groupId>esthesis</groupId>
-    <artifactId>esthesis-edge</artifactId>
+    <artifactId>esthesis-bom</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>esthesis-edge-backend</artifactId>
+  <artifactId>esthesis-edge</artifactId>
   <packaging>pom</packaging>
 
   <properties>
@@ -20,8 +20,8 @@
   </properties>
 
   <modules>
-    <module>esthesis-edge-backend-api</module>
-    <module>esthesis-edge-backend-impl</module>
+    <module>esthesis-edge-backend</module>
+    <module>esthesis-edge-modules</module>
   </modules>
 
 </project>
