chore: edge wip

--- a/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ esthesis:
         enabled: true
       registration:
         enabled: true
-        url: http://localhost:8080
+        url: http://localhost:59070/api/v1/register
         secret: mysecret
       tags:
         - edge
