--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
   </properties>
 
   <dependencies>
+    <!-- ESTHESIS -->
+    <dependency>
+      <groupId>esthesis</groupId>
+      <artifactId>esthesis-common</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
     <!-- TESTING -->
     <dependency>
       <groupId>io.quarkus</groupId>
