--- a/esthesis-edge-backend/esthesis-edge-backend-impl/pom.xml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/pom.xml
@@ -12,18 +12,10 @@
 
     <dependencies>
         <!-- QUARKUS -->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-arc</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <artifactId>quarkus-config-yaml</artifactId>
             <groupId>io.quarkus</groupId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-rest</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-jackson</artifactId>
@@ -36,38 +28,12 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-h2</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <artifactId>quarkus-hibernate-validator</artifactId>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-qute</artifactId>-->
-<!--        </dependency>-->
-
-        <!-- CAMEL -->
-<!--        <dependency>-->
-<!--            <artifactId>camel-quarkus-bean</artifactId>-->
-<!--            <groupId>org.apache.camel.quarkus</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <artifactId>camel-quarkus-log</artifactId>-->
-<!--            <groupId>org.apache.camel.quarkus</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <artifactId>camel-quarkus-seda</artifactId>-->
-<!--            <groupId>org.apache.camel.quarkus</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.camel.quarkus</groupId>-->
-<!--            <artifactId>camel-quarkus-quartz</artifactId>-->
-<!--        </dependency>-->
 
         <!-- ESTHESIS -->
         <dependency>
             <groupId>esthesis</groupId>
-            <artifactId>esthesis-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <artifactId>esthesis-core-services-agent-client</artifactId>
+            <version>3.0.52-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>esthesis</groupId>
@@ -79,37 +45,12 @@
             <artifactId>esthesis-edge-modules-enedis</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>esthesis</groupId>-->
-<!--            <artifactId>esthesis-edge-backend-api</artifactId>-->
-<!--            <version>1.0.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
 
         <!-- THIRD-PARTY -->
-<!--        <dependency>-->
-<!--            <artifactId>commons-lang3</artifactId>-->
-<!--            <groupId>org.apache.commons</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.google.guava</groupId>-->
-<!--            <artifactId>guava</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <artifactId>lombok</artifactId>
             <groupId>org.projectlombok</groupId>
         </dependency>
-
-        <!-- TEST -->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-junit5</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.rest-assured</groupId>-->
-<!--            <artifactId>rest-assured</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
