--- a/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application-dev.yaml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application-dev.yaml
@@ -8,3 +8,15 @@ quarkus:
     category:
       esthesis:
         level: DEBUG
+
+"%debug-rest":
+  quarkus:
+    log:
+      category:
+        "org.jboss.resteasy":
+          min-level: TRACE
+          level: TRACE
+    rest-client:
+      logging:
+        scope: request-response
+        body-limit: 65536
