--- a/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
@@ -5,13 +5,18 @@ quarkus:
     database:
       generation: update
   datasource:
-    db-kind: h2
+    db-kind: mariadb
+    username: esthesis-system
+    password: esthesis-system
     jdbc:
-      url: jdbc:h2:file:./edgedb;DATABASE_TO_UPPER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
+      url: jdbc:mariadb://localhost:4306/esthesis-edge
   rest-client:
-    AgentResource:
-        url: http://localhost:59070
-        scope: Singleton
+    EsthesisAgentServiceClient:
+      url: http://localhost:59070
+      scope: Singleton
+    EnedisClient:
+      url: https://ext.prod-sandbox.api.enedis.fr
+      scope: Singleton
 
 # noinspection YAMLSchemaValidation
 esthesis:
@@ -27,7 +32,7 @@ esthesis:
       push:
         enabled: true
       registration:
-        enabled: true
+        enabled: false
         secret: mysecret
       tags:
         - edge
