--- a/esthesis-edge-modules/esthesis-edge-modules-enedis/pom.xml
+++ b/esthesis-edge-modules/esthesis-edge-modules-enedis/pom.xml
@@ -12,59 +12,16 @@
 
     <dependencies>
         <!-- QUARKUS -->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-arc</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <artifactId>quarkus-config-yaml</artifactId>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-rest</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-rest-jackson</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-hibernate-orm-panache</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-jdbc-h2</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <artifactId>quarkus-hibernate-validator</artifactId>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--        </dependency>-->
-
-        <!-- CAMEL -->
         <dependency>
-            <artifactId>camel-quarkus-bean</artifactId>
-            <groupId>org.apache.camel.quarkus</groupId>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client</artifactId>
         </dependency>
         <dependency>
-            <artifactId>camel-quarkus-log</artifactId>
-            <groupId>org.apache.camel.quarkus</groupId>
-        </dependency>
-        <dependency>
-            <artifactId>camel-quarkus-seda</artifactId>
-            <groupId>org.apache.camel.quarkus</groupId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-quartz</artifactId>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
         </dependency>
 
         <!-- ESTHESIS -->
-<!--        <dependency>-->
-<!--            <groupId>esthesis</groupId>-->
-<!--            <artifactId>esthesis-common</artifactId>-->
-<!--            <version>1.0.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>esthesis</groupId>
             <artifactId>esthesis-edge-backend-api</artifactId>
@@ -84,18 +41,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-
-        <!-- TEST -->
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-junit5</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.rest-assured</groupId>-->
-<!--            <artifactId>rest-assured</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
