--- a/esthesis-edge-backend/esthesis-edge-backend-impl/pom.xml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/pom.xml
@@ -51,14 +51,11 @@
     <dependency>
       <groupId>com.influxdb</groupId>
       <artifactId>influxdb-client-java</artifactId>
-      <version>${influxdb-client-java.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.influxdb</groupId>
-      <artifactId>flux-dsl</artifactId>
-      <version>${flux-dsl.version}</version>
+      <groupId>org.eclipse.paho</groupId>
+      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
     </dependency>
-
   </dependencies>
 
   <build>
