chore: mqtt integration

--- a/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
+++ b/esthesis-edge-backend/esthesis-edge-backend-impl/src/main/resources/application.yaml
@@ -33,6 +33,7 @@ esthesis:
       push:
         enabled: true
         url: tcp://mosquitto.esthesis:1883
+        topic-telemetry: esthesis/telemetry
       registration:
         enabled: true
         secret:
