--- a/esthesis-edge-docs/Writerside/writerside.cfg
+++ b/esthesis-edge-docs/Writerside/writerside.cfg
@@ -4,5 +4,5 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
-    <instance src="eed.tree" web-path="https://esthes.is/docs/edge"/>
+    <instance src="esthesis-edge.tree" web-path="https://esthes.is/docs/edge"/>
 </ihp>
