test: edge sync service core + ssl tests

--- a/esthesis-edge-backend/src/main/resources/application-test.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-test.yaml
@@ -1,4 +1,6 @@
 quarkus:
+  scheduler:
+    enabled: false
   datasource:
     db-kind: h2
     jdbc:
@@ -12,8 +14,6 @@ quarkus:
 esthesis:
   edge:
     core:
-      push:
-        enabled: false
       registration:
         secret: "test"
 
