--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -10,7 +10,8 @@
     <version>1.0.6-SNAPSHOT</version>
   </parent>
 
-  <artifactId>esthesis-edge-backend</artifactId>
+  <artifactId>esthesis-edge</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
@@ -115,7 +116,6 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>influxdb</artifactId>
-      <version>1.20.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
