--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -143,7 +143,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>${version.jacoco}</version>
+          <version>${jacoco.version}</version>
           <executions>
             <execution>
               <id>default-instrument</id>
