cicd: Surefire Runs Unit Tests and JaCoCo Captures Coverage

--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -132,6 +132,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>${jacoco.argLine}</argLine> <!-- Attach JaCoCo agent -->
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
