--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -130,15 +130,12 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
-      <plugin>
+      <!-- <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>${jacoco.argLine}</argLine> <!-- Attach JaCoCo agent -->
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-      </plugin>
+      </plugin> -->
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
