--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,27 @@
+####################################################################################################
+# esthesis EDGE
+# Production Docker Compose
+#
+# Note: If you are looking to set up a development environment instead, use the
+# docker-compose.yaml file available under "_dev" directory.
+####################################################################################################
 services:
-  edge-mariadb:
+  edge:
+    image: 192.168.50.211:5000/esthesis/esthesis-edge:1.0.0-SNAPSHOT
+    restart: unless-stopped
+    environment:
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:mariadb://mariadb:3306/esthesis-edge
+      ESTHESIS_EDGE_LOCAL_INFLUX_DB_URL: http://influxdb:8086
+    ports:
+      - "6080:8080"
+    depends_on:
+      mariadb:
+        condition: service_healthy
+      influxdb:
+        condition: service_healthy
+  mariadb:
     image: mariadb:11.5.2
     restart: unless-stopped
-    ports:
-      - "4306:3306"
     environment:
       MARIADB_ROOT_PASSWORD: esthesis-system
       MARIADB_USER: esthesis-system
@@ -11,20 +29,33 @@ services:
       MARIADB_DATABASE: esthesis-edge
     volumes:
       - edge-mariadb-vol:/var/lib/mysql
-  edge-influxdb:
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb-admin ping -h localhost -u root -pesthesis-system | grep 'mysqld is alive'"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+  influxdb:
     image: influxdb:2.7.10
     restart: unless-stopped
-    ports:
-      - "9086:8086"
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: esthesis-system
       DOCKER_INFLUXDB_INIT_PASSWORD: esthesis-system
       DOCKER_INFLUXDB_INIT_ORG: esthesis
       DOCKER_INFLUXDB_INIT_BUCKET: edge
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "Ecw_sqxjoIx7RddbK6kdwh57Ly6LjYvg"
+    ports:
+      - "6086:8086"
     volumes:
       - edge-influxdb-vol-data:/var/lib/influxdb2
       - edge-influxdb-vol-config:/etc/influxdb2
+    healthcheck:
+      test: ["CMD-SHELL", "influx ping -host http://localhost:8086 | grep 'OK'"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
 volumes:
   edge-mariadb-vol:
