--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -17,7 +17,7 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <quarkus.jacoco.excludes>esthesis/edge/dto/DeviceDTO</quarkus.jacoco.excludes>
+    <quarkus.jacoco.excludes>esthesis/edge/dto/DeviceDTO,esthesis/edge/dto/TemplateDTO</quarkus.jacoco.excludes>
   </properties>
 
   <dependencies>
