cicd: exclude also .java

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ esthesis-edge-backend.sonar.tests=src/test/java/
 esthesis-edge-backend.sonar.java.test.binaries=target/test-classes/**
 esthesis-edge-backend.sonar.junit.reportPaths=target/surefire-reports/
 esthesis-edge-backend.sonar.coverage.jacoco.xmlReportPaths=target/jacoco-report/jacoco.xml
-esthesis-edge-backend.sonar.coverage.exclusions=**/dto/TemplateDTO.class
+esthesis-edge-backend.sonar.coverage.exclusions=**/dto/TemplateDTO.class,**/dto/TemplateDTO.java
 
 
 sonar.sourceEncoding=UTF-8
