chore: EDGE release process [wip]

--- a/esthesis-edge-backend/src/main/resources/application.yaml
+++ b/esthesis-edge-backend/src/main/resources/application.yaml
@@ -30,7 +30,7 @@ esthesis:
       enabled: false
       influx-db:
         url: http://localhost:9086
-        token: esthesis
+        token: esthesis-edge
         bucket: edge
         org: esthesis
     core:
