--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>esthesis</groupId>
     <artifactId>esthesis-bom</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8-SNAPSHOT</version>
   </parent>
 
   <artifactId>esthesis-edge</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
