--- a/esthesis-edge-backend/pom.xml
+++ b/esthesis-edge-backend/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>esthesis</groupId>
     <artifactId>esthesis-bom</artifactId>
-    <version>1.0.15</version>
+    <version>1.0.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>esthesis-edge</artifactId>
-  <version>1.0.11</version>
+  <version>1.0.12-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>esthesis</groupId>
       <artifactId>esthesis-common</artifactId>
-      <version>1.0.15</version>
+      <version>1.0.16-SNAPSHOT</version>
     </dependency>
 
     <!-- QUARKUS -->
