docs: EDGE documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 **/target
 /esthesis-edge-backend/esthesis-edge-backend-impl/edgedb.mv.db
 local-env.sh
-esthesis-edge-*.tgz
+helm/esthesis-edge-helm-*.tgz
