chore: customised self-registration buttons

--- a/esthesis-edge-backend/src/main/resources/application-dev.yaml
+++ b/esthesis-edge-backend/src/main/resources/application-dev.yaml
@@ -8,6 +8,12 @@ quarkus:
     category:
       esthesis:
         level: DEBUG
+esthesis:
+  edge:
+    modules:
+      enedis:
+        self-registration:
+          state-checking: false
 
 "%debug-rest":
   quarkus:
