--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -137,6 +137,12 @@ spec:
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo2Url }}"
             - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO2_ALT"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo2Alt }}"
+            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_URL"
+              value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo3Url }}"
+            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_LOGO3_ALT"
+              value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.logo3Alt }}"
+            - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_BUTTON_URL"
+              value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.buttonUrl }}"
             - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_TITLE"
               value: "{{ .Values.esthesis.edge.modules.enedis.selfRegistration.page.registration.title }}"
             - name: "ESTHESIS_EDGE_CORE_MODULES_ENEDIS_SELF_REGISTRATION_PAGE_REGISTRATION_MESSAGE"
